# firenze

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/notebooks/: hello_world.ipynb
firenze/: cli.py  exceptions.py  notebook.py  progress.py
scripts/: firenze
tests/: test_firenze.py
tests/data/: notebook_with_error.ipynb  notebook_with_variables.ipynb  notebook_with_variables_and_magic.ipynb  one_cell_notebook.ipynb
