[tool.poetry]
name = "firenze"
version = "0.1.0"
description = ""
authors = ["Pablo Alcain <pabloalcain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
pre-commit = "^3.0.1"
nbformat = "^5.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
