[tool.poetry]
name = "firenze"
version = "0.1.0"
description = ""
authors = ["Pablo Alcain <pabloalcain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
pre-commit = "^3.0.1"
nbformat = "^5.8.0"
nbclient = "^0.7.4"
ipykernel = "^6.22.0"
nbconvert = "^7.3.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
