[tool.poetry]
name = "firenze"
version = "0.1.4"
description = "A lean executor for jupyter notebooks."
authors = ["Pablo Alcain <pabloalcain@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pabloalcain/firenze"
keywords = ["jupyter", "notebook"]

[tool.poetry.dependencies]
python = "^3.9"
nbformat = "^5.8.0"
nbclient = "^0.7.4"
ipykernel = "^6.22.0"
nbconvert = "^7.3.1"
click = "^8.1.3"
boto3 = "^1.26.156"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
jupyter = "^1.0.0"
notebook = "^6.5.4"
moto = "^4.1.11"
pytest = "^7.2.1"
pre-commit = "^3.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
firenze = 'firenze.cli:execute_notebook'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
